--- a/composer.json
+++ b/composer.json
@@ -8,17 +8,22 @@
         "GPL-3.0-only",
         "proprietary"
     ],
-    "extra": {
-        "oxideshop": {
-            "target-directory": "oxac/oxcoin"
-        }
-    },
     "require": {
-        "oxid-esales/oxideshop-metapackage-ce": ">=6.1.0"
+        "php": "^8.0 | ^8.1"
+    },
+    "conflict": {
+        "oxid-esales/oxideshop-ce": "<7.0"
     },
     "autoload": {
         "psr-4": {
-            "OxidAcademy\\OxCoin\\": "."
+            "OxidAcademy\\OxCoin\\": "./src",
+            "OxidAcademy\\OxCoin\\Tests\\": "./tests"
+        }
+    },
+    "config": {
+        "allow-plugins": {
+            "oxid-esales/oxideshop-composer-plugin": true,
+            "oxid-esales/oxideshop-unified-namespace-generator": true
         }
     }
 }
