--- a/composer.json
+++ b/composer.json
@@ -14,11 +14,21 @@
         }
     },
     "require": {
-        "oxid-esales/oxideshop-metapackage-ce": ">=6.1.0"
+        "php": "^8.0 | ^8.1"
+    },
+    "conflict": {
+        "oxid-esales/oxideshop-ce": "<6.14"
     },
     "autoload": {
         "psr-4": {
-            "OxidAcademy\\OxCoin\\": "."
+            "OxidAcademy\\OxCoin\\": "./src",
+            "OxidAcademy\\OxCoin\\Tests\\": "./tests"
+        }
+    },
+    "config": {
+        "allow-plugins": {
+            "oxid-esales/oxideshop-composer-plugin": true,
+            "oxid-esales/oxideshop-unified-namespace-generator": true
         }
     }
 }
